<resources>
    <string name="app_name">17 Objetivos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Os 17 Objetivos para o Desenvolvimento Sustentável</string>
    <string name="nav_header_subtitle">@string/link_acess_agend</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Sobre</string>
    <string name="menu_home">Home</string>
    <string name="menu_agenda">A Agenda 2030</string>
    <string name="menu_declaration">A Declaração</string>
    <string name="menu_docs">Documentos Temáticos</string>
    <string name="menu_cupula">A Cúpula</string>
    <string name="menu_share">Compartilhe o App</string>
    <string name="menu_send">Envie a um Amigo</string>
    <string name="splash_description">Os 17 Objetivos para o desenvolvimento sustentável da ONU</string>
    <string name="logo_description">Os 17 Objetivos para um desenvolvimento sustentável</string>
    <string name="url_nacoes_unidas_ods_2030">https://nacoesunidas.org/pos2015/agenda2030/</string>
    <string name="ods1_description">Objetivo de Desenvolvimento Sustentável 1 - Erradicação da Pobreza</string>
    <string name="ods2_description">Obetivo de Desenvolvimento Sustentável 2 - Fome Zero e Agricultura Sustentável</string>
    <string name="ods3_description">Obetivo de Desenvolvimento Sustentável 3 - Boa Saúde e Bem-Estar</string>
    <string name="ods4_description">Obetivo de Desenvolvimento Sustentável 4 - Educação de Qualidade</string>
    <string name="ods5_description">Obetivo de Desenvolvimento Sustentável 5 - Igualdade de Gênero</string>
    <string name="ods6_description">Obetivo de Desenvolvimento Sustentável 6 - Água Potável e Saneamento</string>
    <string name="ods7_description">Obetivo de Desenvolvimento Sustentável 7 - Energia Limpa e Acessível</string>
    <string name="ods8_description">Objetivo de Desenvolvimento Sustentável 8 - Trabalho Decente e Crescimento Econômico</string>
    <string name="ods9_description">Obetivo de Desenvolvimento Sustentável 9 - Indústria, Inovação e Infraestrutura</string>
    <string name="ods10_description">Obetivo de Desenvolvimento Sustentável 10 - Redução das Desilgualdades</string>
    <string name="ods11_description">Obetivo de Desenvolvimento Sustentável 11 - Cidades e Comunidades Sustentáveis</string>
    <string name="ods12_description">Obetivo de Desenvolvimento Sustentável 12 - Consumo e Produção Responsáveis</string>
    <string name="ods13_description">Obetivo de Desenvolvimento Sustentável 13 - Ação Contra a Mudança Global do Clima</string>
    <string name="ods14_description">Obetivo de Desenvolvimento Sustentável 14 - Vida na Água</string>
    <string name="ods15_description">Obetivo de Desenvolvimento Sustentável 15 - Vida Terrestre</string>
    <string name="ods16_description">Obetivo de Desenvolvimento Sustentável 16 - Paz, Justiça e Instituições Eficazes</string>
    <string name="ods17_description">Obetivo de Desenvolvimento Sustentável 17 - Parcerias e Meios de Implantação</string>
    <string name="ods_onu_desc">Os 17 Objetivos de Desenvolvimento Sustentáveis da ONU</string>
    <string name="defaultNumberOfOds">1</string>
    <string name="defaultTitleOfOds">ERRADIÇÃO DA POBREZA</string>
    <string name="subTitleOfOds">Acabar com a pobreza em todas as suas formas, em todos os lugares</string>
    <string name="ods1_title">ERRADICAÇÃO DA POBREZA</string>
    <string name="ods2_title">FOME ZERO E AGRICULTURA SUSTENTÁVEL</string>
    <string name="ods3_title">SAÚDE E BEM-ESTAR</string>
    <string name="ods4_title">EDUCAÇÃO DE QUALIDADE</string>
    <string name="ods5_title">IGUALDADE DE GÊNERO</string>
    <string name="ods6_title">ÁGUA POTÁVEL E SANEAMENTO</string>
    <string name="ods7_title">ENERGIA LIMPA E ACESSÍVEL</string>
    <string name="ods8_title">TRABALHO DECENTE E CRESCIMENTO ECONÔMICO</string>
    <string name="ods9_title">INDÚSTRIA, INOVAÇÃO E INFRAESTRUTURA</string>
    <string name="ods10_title">REDUÇÃO DAS DESIGUALDADES</string>
    <string name="ods11_title">CIDADES E COMUNIDADES SUSTENTÁVEIS</string>
    <string name="ods12_title">CONSUMO E PRODUÇÃO RESPONSÁVEIS</string>
    <string name="title_moment_agenda">Momento de Ação Global Para as Pessoas e o Planeta</string>
    <string name="moment_agenda">
        O ano de 2015 apresentou uma oportunidade histórica e sem precedentes para reunir os países e a população global e decidir sobre novos caminhos, melhorando a vida das pessoas em todos os lugares.

        \n\nEssas decisões determinarão o curso global de ação para acabar com a pobreza, promover a prosperidade e o bem-estar para todos, proteger o meio ambiente e enfrentar as mudanças climáticas.

        \n\nEm 2015, os países tiveram a oportunidade de adotar a nova agenda de desenvolvimento sustentável e chegar a um acordo global sobre a mudança climática.

        \n\nAs ações tomadas em 2015 resultaram nos novos Objetivos de Desenvolvimento Sustentável (ODS), que se baseiam nos oito Objetivos de Desenvolvimento do Milênio (ODM).

        \n\nAs Nações Unidas trabalharam junto aos governos, sociedade civil e outros parceiros para aproveitar o impulso gerado pelos ODM e levar à frente uma agenda de desenvolvimento pós-2015 ambiciosa.
    </string>
    <string name="legend_image_moment_agenda">Foto: ONU/Kibae Park</string>
    <string name="title_rumo_agenda">Rumo à Agenda de Desenvolvimento Sustentável</string>
    <string name="rumo_agenda">
        Garantir uma vida com dignidade – 2015 foi o ano no qual os países se adaptaram e adotaram uma nova agenda de desenvolvimento que se baseou nos Objetivos de Desenvolvimento do Milênio (ODM).

        \n\nOs ODM foram estabelecidos no ano 2000 e incluem oito objetivos de combate à pobreza a ser alcançados até o final de 2015. Desde então, progressos significativos foram realizados:

        \n\t - A pobreza global continua diminuindo;
        \n\t - Mais crianças do que nunca estão frequentando a escola primária;
        \n\t - Mortes infantis caíram drasticamente;
        \n\t - O acesso a água potável expandiu significativamente;
        \n\t - As metas de investimento para combater a malária, a aids e a tuberculose salvaram milhões de pessoas.
        \n\nOs ODM fizeram uma verdadeira diferença na vida das pessoas, e esse progresso pode ser expandindo na maioria dos países com forte liderança e responsabilidade.
    </string>
    <string name="title_now_agenda">O que Vem Agora?</string>
    <string name="now_agenda">
        Os Objetivos de Desenvolvimento do Milênio mostram que metas funcionam. Eles ajudaram a acabar com a pobreza, mas não completamente.

        \n\nAs Nações Unidas definiram os Objetivos de Desenvolvimento Sustentável (ODS) como parte de uma nova agenda de desenvolvimento sustentável que deve finalizar o trabalho dos ODM e não deixar ninguém para trás.

        \n\nEssa agenda, lançada em setembro de 2015 durante a Cúpula de Desenvolvimento Sustentável, foi discutida na Assembleia Geral da ONU, onde os Estados-membros e a sociedade civil negociaram suas contribuições.

        \n\nO processo rumo à agenda de desenvolvimento pós-2015 foi liderado pelos Estados-membros com a participação dos principais grupos e partes interessadas da sociedade civil. A agenda reflete os novos desafios de desenvolvimento e está ligada ao resultado da Rio+20 – a Conferência da ONU sobre Desenvolvimento Sustentável – que foi realizada em junho de 2012 no Rio de Janeiro, Brasil.
    </string>
    <string name="text_link_playslist_videos">\n\t - Acesse todos os vídeos sobre a agenda pós-2015 clicando aqui!\n</string>
    <string name="now_agenda_2">
        \nHouve inúmeras contribuições para a agenda – em especial os Objetivos de Desenvolvimento Sustentável –, propostas por um grupo de trabalho da Assembleia Geral, através de um relatório do comitê intergovernamental de especialistas em financiamento para o desenvolvimento sustentável, de diálogos da Assembleia Geral sobre facilitação tecnológica e muitos outros.

        \n\nEm dezembro de 2014, o secretário-geral da ONU, Ban Ki-moon, lançou seu Relatório de Síntese, onde resume essas contribuições e apresenta sua visão para a agenda de desenvolvimento sustentável pós-2015.

        \n\nBaseado na experiência de duas décadas de prática de desenvolvimento e a partir de contribuições obtidas através de um processo aberto e inclusivo, o relatório “O Caminho para a Dignidade em 2030” apresentou um mapa com o objetivo de alcançar a dignidade nos próximos 15 anos. Ban apresentou formalmente seu relatório em janeiro de 2015 para os Estados-membros da ONU.

        \n\nEm uma entrevista realizada em 2015, a então assessora especial do secretário-geral sobre o Plano de Desenvolvimento Pós-2015, Amina J. Mohammed, disse que um dos principais pontos do relatório é “a esperança e a oportunidade que temos diante de nós (…). Essa é a geração que pode fazer o que precisa fazer para vencer muitos dos atuais desafios. Então, se há alguma coisa que nós podemos tirar desse relatório, é que até 2030 podemos acabar com a pobreza, podemos transformar vidas e podemos encontrar formas de proteger o planeta enquanto fazemos isso”.

        \n\nA ONU também facilitou a conversa global sobre a agenda de desenvolvimento pós-2015 e apoiou amplas consultas, tais como a pesquisa “Meu Mundo”. Também teve a responsabilidade de apoiar os Estados-membros, fornecendo ajuda baseada em evidências, análises contextuais e experiência de campo.\n
    </string>
    <string name="menu_17_obj">Transformar o Mundo</string>
    <string name="title_text_docs_tems">Documentos temáticos sobre os ODS</string>
    <string name="text_docs_tems">
        Durante evento na Câmara dos Deputados em junho de 2017, reunindo parlamentares e representantes da sociedade civil, o copresidente do Grupo Assessor do Sistema ONU para a Agenda 2030, Haroldo Machado Filho, entregou documentos temáticos sobre os Objetivos do Desenvolvimento Sustentável (ODS).

        \n\nOs documentos temáticos são contribuições de 18 agências, fundos e programas da ONU no Brasil, de acordo com as áreas temáticas de atuação.

        \n\nO conjunto de relatórios apresenta temas e questões que o Sistema ONU no Brasil considera relevantes no âmbito do processo de implementação dos ODS no Brasil, e pretendem servir como subsídios à Comissão Nacional para os Objetivos de Desenvolvimento Sustentável para as discussões temáticas correspondentes na fase preparatória para o fórum. A comissão nacional para os objetivos globais conta com oito membros da sociedade civil e oito do governo brasileiro.

        \n\nEm exercício desde 2014, o Grupo Assessor do Sistema ONU para a Agenda 2030 conta com a participação de 18 organismos do Sistema ONU, além de membros do governo federal. Acesse ao lado cada um dos documentos temáticos.
    </string>
    <string name="text_link_pdf_doc_tem">
        "Acesse clicando aqui o documento temático sobre os ODS "
        "1, 2, 3, 5, 9 e 14."
    </string>
    <string name="title_about">Os 17 Objetivos para o Desenvolvimento Sustentável</string>
    <string name="text_created_about">Criado por Luiz Magno M. Sousa</string>
    <string name="explanation_about">Todo o conteúdo neste app foi extraído exclusivamente do site ONU Brasil (disponível em https://nacoesunidas.org/pos2015/agenda2030/) para fins de estudo, sem nenhuma consulta ou parceria com a ONU Brasil, visando auto-conhecimento e uma ajuda simplória para manter a sustentabilidade do planeta para a nossa e futuras gerações.</string>
    <string name="text_link_about">Para acessar a página, clique aqui.</string>
    <string name="git_about">Acesse o repositório do app no Github.</string>
    <string name="desc_icon_git">Repositório no github.</string>
</resources>