<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_17_obj"
            android:icon="@drawable/ic_business"
            android:title="@string/menu_17_obj" />
        <item
            android:id="@+id/nav_declaration"
            android:icon="@drawable/ic_border_color"
            android:title="@string/menu_declaration" />
        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/ic_attach_file"
            android:title="@string/menu_docs" />
        <item
            android:id="@+id/nav_cupula"
            android:icon="@drawable/ic_group_work"
            android:title="@string/menu_cupula" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
