<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AgendaActivity"
    tools:showIn="@layout/layout_agenda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_moment_agenda"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            android:text="@string/moment_agenda"
            android:textSize="16sp"
            tools:targetApi="O"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_rumo_agenda"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            android:text="@string/rumo_agenda"
            android:textSize="16sp"
            tools:targetApi="O"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_now_agenda"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            android:text="@string/now_agenda"
            android:textSize="16sp"
            tools:targetApi="O" />

        <TextView
            android:id="@+id/textLinkPlaylistAgendaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_texts"
            android:text="@string/text_link_playslist_videos"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <fragment
            android:id="@+id/youTubeFragmentId"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_margin="@dimen/margin_of_texts"
            android:text="@string/now_agenda_2"
            android:textSize="16sp"
            tools:targetApi="O"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>