<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/homeBackgroundId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundOds"
        tools:context=".HomeFragment">

        <ScrollView
            android:id="@+id/scrollHomeId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TableLayout
                android:id="@+id/tableHomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/lineTable1Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageONUId"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods_onu_desc"
                        android:src="@drawable/ods_onu" />

                    <ImageView
                        android:id="@+id/imageOds1Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods1_description"
                        app:srcCompat="@drawable/ods_1" />


                </TableRow>

                <TableRow
                    android:id="@+id/lineTable2Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds2Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods2_description"
                        app:srcCompat="@drawable/ods_2" />

                    <ImageView
                        android:id="@+id/imageOds3Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods3_description"
                        app:srcCompat="@drawable/ods_3" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable3Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds4Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods4_description"
                        app:srcCompat="@drawable/ods_4" />

                    <ImageView
                        android:id="@+id/imageOds5Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods5_description"
                        app:srcCompat="@drawable/ods_5" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable4Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds6Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods6_description"
                        app:srcCompat="@drawable/ods_6" />

                    <ImageView
                        android:id="@+id/imageOds7Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods7_description"
                        app:srcCompat="@drawable/ods_7" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable5Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds8Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods8_description"
                        app:srcCompat="@drawable/ods_8" />

                    <ImageView
                        android:id="@+id/imageOds9Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods9_description"
                        app:srcCompat="@drawable/ods_9" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable6Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds10Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods10_description"
                        app:srcCompat="@drawable/ods_10" />

                    <ImageView
                        android:id="@+id/imageOds11Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods11_description"
                        app:srcCompat="@drawable/ods_11" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable7Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds12Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods12_description"
                        app:srcCompat="@drawable/ods_12" />

                    <ImageView
                        android:id="@+id/imageOds13Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods13_description"
                        app:srcCompat="@drawable/ods_13" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable8Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds14Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods14_description"
                        app:srcCompat="@drawable/ods_14" />

                    <ImageView
                        android:id="@+id/imageOds15Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods15_description"
                        app:srcCompat="@drawable/ods_15" />

                </TableRow>

                <TableRow
                    android:id="@+id/lineTable9Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageOds16Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods16_description"
                        app:srcCompat="@drawable/ods_16" />

                    <ImageView
                        android:id="@+id/imageOds17Id"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/ods17_description"
                        app:srcCompat="@drawable/ods_17" />

                </TableRow>

            </TableLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>