<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_texts"
            android:gravity="center"
            android:text="@string/title_about"
            android:textSize="@dimen/size_of_titles"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_texts"
            android:gravity="center"
            android:text="@string/text_created_about"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation_about"
            android:layout_margin="@dimen/margin_of_texts"
            android:justificationMode="inter_word"
            android:textSize="@dimen/size_of_texts"
            tools:targetApi="O"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_link_about"
            android:layout_margin="@dimen/margin_of_texts"
            android:justificationMode="inter_word"
            android:textSize="@dimen/size_of_texts"
            android:textColor="@color/colorPrimary"
            tools:targetApi="O"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_github_small"
            android:adjustViewBounds="true"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/desc_icon_git"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/git_about"
            android:layout_margin="@dimen/margin_of_texts"
            android:justificationMode="inter_word"
            android:textSize="@dimen/size_of_texts"
            android:gravity="center"
            tools:targetApi="O"
             />



    </LinearLayout>
</ScrollView>