<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DocumentsActivity"
    tools:showIn="@layout/layout_documents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_text_docs_tems"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:text="@string/text_docs_tems"
            tools:targetApi="O"/>

        <TextView
            android:id="@+id/textLinkDocsTemsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_link_pdf_doc_tem"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>